--- a/index.html
+++ b/index.html
@@ -1,173 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile Intro - Tết Decor</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      background: url('https://i.imgur.com/ICQnKPT.jpg') no-repeat center center/cover; /* Nền trời pháo hoa Tết */
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #fff;
-      overflow: hidden;
-    }
-
-    .profile-card {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 15px;
-      padding: 20px;
-      width: 350px;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-      position: relative;
-    }
-
-    /* Avatar */
-    .avatar {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      margin: 0 auto;
-      border: 3px solid rgba(255, 255, 255, 0.6);
-    }
-
-    .username {
-      font-size: 1.5rem;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-
-    .status {
-      font-size: 0.9rem;
-      margin-top: 5px;
-      opacity: 0.8;
-    }
-
-    .social-icons {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-      gap: 15px;
-    }
-
-    .social-icons a {
-      width: 40px;
-      height: 40px;
-      background: rgba(255, 255, 255, 0.2);
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #fff;
-      text-decoration: none;
-      font-size: 1.2rem;
-      transition: background 0.3s;
-    }
-
-    .social-icons a:hover {
-      background: rgba(255, 255, 255, 0.4);
-    }
-
-    .views {
-      margin-top: 15px;
-      font-size: 0.9rem;
-      opacity: 0.7;
-    }
-
-    /* Trang trí hoa mai */
-    .flower {
-      position: absolute;
-      width: 60px;
-      height: 60px;
-      background: url('https://i.imgur.com/EtIS51O.png') no-repeat center center/contain; /* Hình hoa mai */
-    }
-
-    .flower.flower1 {
-      top: -30px;
-      left: -30px;
-      animation: float 6s infinite ease-in-out;
-    }
-
-    .flower.flower2 {
-      top: -20px;
-      right: -20px;
-      animation: float 7s infinite ease-in-out;
-    }
-
-    /* Đèn lồng */
-    .lantern {
-      position: absolute;
-      width: 50px;
-      height: 80px;
-      background: url('https://i.imgur.com/TmLTGLv.png') no-repeat center center/contain; /* Hình đèn lồng */
-      animation: swing 4s infinite ease-in-out;
-    }
-
-    .lantern.lantern1 {
-      top: -60px;
-      left: 10px;
-    }
-
-    .lantern.lantern2 {
-      top: -60px;
-      right: 10px;
-    }
-
-    @keyframes swing {
-      0%, 100% {
-        transform: rotate(-10deg);
-      }
-      50% {
-        transform: rotate(10deg);
-      }
-    }
-
-    @keyframes float {
-      0%, 100% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(10px);
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gửi đến người tớ thích ❤️</title>
+    <style>
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+            background-color: #ffe6e6;
+            margin: 50px;
+        }
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: inline-block;
+        }
+        h1 {
+            color: #ff4d4d;
+        }
+        button {
+            background-color: #ff4d4d;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        button:hover {
+            background-color: #cc0000;
+        }
+        #message {
+            display: none;
+            margin-top: 20px;
+            font-size: 18px;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-  <div class="profile-card">
-    <!-- Hoa mai -->
-    <div class="flower flower1"></div>
-    <div class="flower flower2"></div>
 
-    <!-- Đèn lồng -->
-    <div class="lantern lantern1"></div>
-    <div class="lantern lantern2"></div>
-
-    <img src="https://scontent.fsgn5-5.fna.fbcdn.net/v/t39.30808-6/471973975_1266827111233657_4369006815813709794_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGFv1DCFbC20AXsgm70-7cTRroIRixwLCpGughGLHAsKmVEceyymDYq11ohH5Y15pRSBj031MxViMk60rpjZHbX&_nc_ohc=1Sm2cRdA6yYQ7kNvgFHy2Ax&_nc_zt=23&_nc_ht=scontent.fsgn5-5.fna&_nc_gid=AVAIgnvFcpGFL7UfkHZXsc2&oh=00_AYDbJwJbCtxn71JCZcXKrPfL4PBXrh_8A7C1LLprPM3VYw&oe=679DAF89" alt="Avatar" class="avatar">
-    <div class="username">Văn Thanh</div>
-    <div class="status">Thầm yêu cô ấy</div>
-    <div class="status">Profile build by Thanh Văn</div>
-    <div class="social-icons">
-      <!-- Facebook -->
-      <a href="https://www.facebook.com/ng.thanh.van.741474" title="Facebook">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <!-- Instagram -->
-      <a href="https://www.instagram.com/vanthanh20061990" title="Instagram">
-        <i class="fab fa-instagram"></i>
-      </a>
+    <div class="container">
+        <h1>💖 Tớ có điều này muốn nói... 💖</h1>
+        <p>Nhấn vào nút dưới đây để biết nhé 😉</p>
+        <button onclick="showMessage()">Bấm vào đây</button>
+        <p id="message">Tớ thích cậu nhiều lắm! 💘 Chúng ta đi chơi cùng nhau nhé? 😊</p>
     </div>
-    <div class="views">&#x1F441; 1,587</div>
-  </div>
+
+    <script>
+        function showMessage() {
+            document.getElementById("message").style.display = "block";
+        }
+    </script>
+
 </body>
 </html>
