--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gửi đến người tớ thích ❤️</title>
+    <title>Gửi đến Hà 💖</title>
     <style>
         body {
             text-align: center;
             font-family: Arial, sans-serif;
-            background-color: #ffe6e6;
+            background-color: #ffebf0;
             margin: 50px;
         }
         .container {
@@ -19,10 +19,14 @@
             display: inline-block;
         }
         h1 {
-            color: #ff4d4d;
+            color: #ff4081;
+        }
+        p {
+            font-size: 18px;
+            color: #333;
         }
         button {
-            background-color: #ff4d4d;
+            background-color: #ff4081;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -32,23 +36,25 @@
             margin-top: 10px;
         }
         button:hover {
-            background-color: #cc0000;
+            background-color: #d81b60;
         }
         #message {
             display: none;
             margin-top: 20px;
-            font-size: 18px;
-            color: #333;
+            font-size: 20px;
+            color: #d81b60;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>💖 Tớ có điều này muốn nói... 💖</h1>
-        <p>Nhấn vào nút dưới đây để biết nhé 😉</p>
-        <button onclick="showMessage()">Bấm vào đây</button>
-        <p id="message">Tớ thích cậu nhiều lắm! 💘 Chúng ta đi chơi cùng nhau nhé? 😊</p>
+        <h1>Gửi Hà đáng yêu 💕</h1>
+        <p>Hà ơi, Vinh có điều này muốn nói... Nhưng chỉ khi cậu nhấn nút bên dưới thôi! 😘</p>
+        <button onclick="showMessage()">Nhấn vào đây 💖</button>
+        <p id="message">Hà à, cậu có biết không? Mỗi ngày tớ đều nghĩ về cậu... 💕  
+        Tớ thích cậu nhiều lắm! Làm người yêu tớ nhé? 😳💞</p>
     </div>
 
     <script>
