--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gửi đến Hà 💖</title>
+    <title>Gửi đến Hồng 💖</title>
     <style>
         body {
             text-align: center;
-            font-family: Arial, sans-serif;
-            background-color: #ffebf0;
-            margin: 50px;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to right, #ff9a9e, #fad0c4);
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .container {
             background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            display: inline-block;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            max-width: 500px;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
         }
         h1 {
             color: #ff4081;
+            font-size: 28px;
         }
         p {
             font-size: 18px;
@@ -29,14 +38,16 @@
             background-color: #ff4081;
             color: white;
             border: none;
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 12px 25px;
+            font-size: 18px;
             cursor: pointer;
-            border-radius: 5px;
-            margin-top: 10px;
+            border-radius: 8px;
+            margin-top: 20px;
+            transition: 0.3s;
         }
         button:hover {
             background-color: #d81b60;
+            transform: scale(1.1);
         }
         #message {
             display: none;
@@ -44,22 +55,62 @@
             font-size: 20px;
             color: #d81b60;
             font-weight: bold;
+            animation: fadeIn 1s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .hearts {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+        .heart {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: pink;
+            clip-path: polygon(50% 0%, 100% 35%, 80% 100%, 50% 80%, 20% 100%, 0% 35%);
+            opacity: 0.7;
+            animation: floatUp 4s linear infinite;
+        }
+        @keyframes floatUp {
+            from { transform: translateY(100vh) scale(1); opacity: 1; }
+            to { transform: translateY(-10vh) scale(0.5); opacity: 0; }
         }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>Gửi Hà đáng yêu 💕</h1>
-        <p>Hà ơi, Vinh có điều này muốn nói... Nhưng chỉ khi cậu nhấn nút bên dưới thôi! 😘</p>
-        <button onclick="showMessage()">Nhấn vào đây 💖</button>
-        <p id="message">Hà à, cậu có biết không? Mỗi ngày tớ đều nghĩ về cậu... 💕  
-        Tớ thích cậu nhiều lắm! Làm người yêu tớ nhé? 😳💞</p>
+        <h1>💖 Gửi đến Hồng xinh đẹp 💖</h1>
+        <p>Hồng ơi, Đạt có điều này muốn nói... Nhưng chỉ khi cậu nhấn vào nút này thôi! 😘</p>
+        <button onclick="showMessage()">Bấm vào đây 💕</button>
+        <p id="message">Hồng à, cậu có biết không? Mỗi ngày tớ đều nghĩ về cậu... 💕  
+        Tớ thích cậu rất nhiều! Làm người yêu tớ nhé? 😳💞</p>
+        <div class="hearts"></div>
     </div>
 
     <script>
         function showMessage() {
             document.getElementById("message").style.display = "block";
+            createHearts();
+        }
+
+        function createHearts() {
+            const heartContainer = document.querySelector(".hearts");
+            for (let i = 0; i < 20; i++) {
+                let heart = document.createElement("div");
+                heart.classList.add("heart");
+                heart.style.left = Math.random() * 100 + "vw";
+                heart.style.animationDuration = Math.random() * 2 + 3 + "s";
+                heartContainer.appendChild(heart);
+                setTimeout(() => { heart.remove(); }, 4000);
+            }
         }
     </script>
 
