--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gửi đến Hồng 💖</title>
+    <title>Gửi đến Hồng yêu thương 💖</title>
     <style>
         body {
             text-align: center;
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #ff9a9e, #fad0c4);
+            background: linear-gradient(to right, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
             margin: 0;
             padding: 0;
             height: 100vh;
@@ -17,61 +17,70 @@
             justify-content: center;
             flex-direction: column;
             position: relative;
+            overflow: hidden;
         }
         .container {
             background: white;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-            max-width: 500px;
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+            max-width: 600px;
             text-align: center;
             position: relative;
             overflow: hidden;
         }
         h1 {
             color: #ff4081;
-            font-size: 28px;
+            font-size: 36px;
+            text-shadow: 0 0 5px rgba(255, 64, 129, 0.7);
+            animation: glow 1.5s infinite alternate;
         }
         p {
-            font-size: 18px;
+            font-size: 20px;
             color: #333;
         }
         button {
             background-color: #ff4081;
             color: white;
             border: none;
-            padding: 12px 25px;
-            font-size: 18px;
+            padding: 14px 30px;
+            font-size: 20px;
             cursor: pointer;
-            border-radius: 8px;
+            border-radius: 10px;
             margin-top: 20px;
             transition: 0.3s;
+            box-shadow: 0 0 10px rgba(255, 64, 129, 0.5);
         }
         button:hover {
             background-color: #d81b60;
-            transform: scale(1.1);
+            transform: scale(1.2);
+            box-shadow: 0 0 20px rgba(216, 27, 96, 0.7);
         }
         #message {
             display: none;
             margin-top: 20px;
-            font-size: 20px;
+            font-size: 22px;
             color: #d81b60;
             font-weight: bold;
-            animation: fadeIn 1s ease-in-out;
+            animation: fadeIn 1.5s ease-in-out;
         }
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
+            from { opacity: 0; transform: translateY(20px); }
             to { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes glow {
+            from { text-shadow: 0 0 10px rgba(255, 64, 129, 0.5); }
+            to { text-shadow: 0 0 20px rgba(255, 64, 129, 1); }
         }
         .heart-container {
             position: relative;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
         .heart-container img {
-            width: 200px;
+            width: 220px;
             height: auto;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            border-radius: 15px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
         }
         .hearts {
             position: absolute;
@@ -84,41 +93,55 @@
         }
         .heart {
             position: absolute;
-            width: 20px;
-            height: 20px;
+            width: 25px;
+            height: 25px;
             background-color: pink;
             clip-path: polygon(50% 0%, 100% 35%, 80% 100%, 50% 80%, 20% 100%, 0% 35%);
-            opacity: 0.7;
+            opacity: 0.8;
             animation: floatUp 4s linear infinite;
         }
         @keyframes floatUp {
-            from { transform: translateY(100px) scale(1); opacity: 1; }
-            to { transform: translateY(-50px) scale(0.5); opacity: 0; }
+            from { transform: translateY(150px) scale(1); opacity: 1; }
+            to { transform: translateY(-100px) scale(0.5); opacity: 0; }
         }
         .dat-img {
             position: absolute;
-            bottom: -30px;
-            right: -30px;
-            width: 100px;
+            bottom: -40px;
+            right: -40px;
+            width: 120px;
             height: auto;
-            transform: rotate(-10deg);
+            transform: rotate(-15deg);
+        }
+        .stars {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background: url('https://media.giphy.com/media/L2V4CaTnF44ZTixFmT/giphy.gif') repeat;
+            background-size: cover;
+            opacity: 0.5;
         }
     </style>
 </head>
 <body>
+    <div class="stars"></div>
 
     <div class="container">
-        <h1>💖 Gửi đến Hồng xinh đẹp 💖</h1>
+        <h1>💖 Gửi đến Hồng đáng yêu nhất 💖</h1>
 
         <div class="heart-container">
             <img src="4FB27DFB-41FC-4A0E-96A1-9F347D632DCD.jpeg" alt="Hồng">
             <div class="hearts"></div>
         </div>
 
-        <p>Hồng ơi, Đạt có điều này muốn nói... Nhưng chỉ khi cậu nhấn vào nút này thôi! 😘</p>
+        <p>Hồng à, cậu có biết không? Mỗi ánh nhìn của cậu như ngàn ánh sao sáng rực trên bầu trời... 🌟  
+        Tớ đã chẳng thể thôi nghĩ về nụ cười của cậu. 😍</p>
+        <p>Nhấn vào nút bên dưới để biết bí mật của tớ nhé... ❤️</p>
         <button onclick="showMessage()">Bấm vào đây 💕</button>
-        <p id="message">Hồng à, cậu có biết không? Mỗi ngày tớ đều nghĩ về cậu... 💕  
-        Tớ thích cậu rất nhiều! Làm người yêu tớ nhé? 😳💞</p>
+        <p id="message">Hồng ơi, từ lần đầu gặp cậu, tớ đã biết rằng trái tim tớ không còn là của tớ nữa... 💓  
+        Nó thuộc về cậu rồi. Làm người yêu tớ nhé? 🥰</p>
 
         <img src="48346BAB-D08D-4C4D-8D17-97E99D4BD8F6.jpeg" alt="Đạt" class="dat-img">
     </div>
@@ -131,7 +154,7 @@
 
         function createHearts() {
             const heartContainer = document.querySelector(".hearts");
-            for (let i = 0; i < 20; i++) {
+            for (let i = 0; i < 30; i++) {
                 let heart = document.createElement("div");
                 heart.classList.add("heart");
                 heart.style.left = Math.random() * 100 + "%";
@@ -141,6 +164,5 @@
             }
         }
     </script>
-
 </body>
 </html>
