--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
+        .dat-img {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            width: 120px;
+            height: auto;
+            border-radius: 50%;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+            z-index: 10;
+        }
     </style>
 </head>
 <body>
@@ -121,6 +131,8 @@
         <p>Mỗi ngày tớ đều cảm thấy thật đặc biệt khi nghĩ về cậu. Cậu chính là nguồn cảm hứng, là ánh sáng, là tất cả mọi thứ đối với tớ. 💖</p>
         <p>Tớ hy vọng rằng chúng ta sẽ cùng nhau bước qua mọi thử thách, nắm tay nhau thật chặt và tạo nên những kỷ niệm tuyệt đẹp. 👫</p>
     </div>
+
+    <img src="48346BAB-D08D-4C4D-8D17-97E99D4BD8F6.jpeg" alt="Đạt" class="dat-img">
 
     <script>
         function showMessage() {
